force-app/main/default/objects/OI_Graph_Edge_Archive__b/OI_Graph_Edge_Archive__b.object-meta.xml
<CustomObject>
    <label>OI Graph Edge Archive</label>
    <pluralLabel>OI Graph Edge Archives</pluralLabel>
    <description>Append-only archive for edge versions, identical structure/rationale to OI_Graph_Node_Archive__b (DataModel.md §3.2, ADR-0014). Index deliberately limited to Edge_Key__c + Version_Number__c + Archived_At__c — same 100-character Big Object index ceiling as the node archive (see Sprint 7 deliverables report).</description>
    <indexes>
        <fullName>OI_Graph_Edge_Archive_Idx</fullName>
        <label>OI Graph Edge Archive Idx</label>
        <fields>
            <name>Edge_Key__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Version_Number__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Archived_At__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
    </indexes>
</CustomObject>