force-app/main/default/objects/OI_Graph_Edge_Archive__b/fields/Edge_Key__c.field-meta.xml
<CustomField>
    <fullName>Edge_Key__c</fullName>
    <label>Edge Key</label>
    <type>Text</type>
    <length>60</length>
    <required>true</required>
    <description>Logical edge identity. Capped at 80 chars (vs. 255 on the live table) — same Big Object 100-character index-length ceiling as OI_Graph_Node_Archive__b.Node_Key__c (see Sprint 7 deliverables report).</description>
</CustomField>