force-app/main/default/objects/OI_Graph_Edge_Archive__b/fields/Edge_Type__c.field-meta.xml
<CustomField>
    <fullName>Edge_Type__c</fullName>
    <label>Edge Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>