force-app/main/default/objects/OI_Graph_Edge_Archive__b/fields/Edge_Version_Key__c.field-meta.xml
<CustomField>
    <fullName>Edge_Version_Key__c</fullName>
    <label>Edge Version Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>