force-app/main/default/objects/OI_Graph_Edge_Archive__b/fields/Scan_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Scan_Run_Id__c</fullName>
    <label>Scan Run Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>