force-app/main/default/objects/OI_Graph_Edge_Archive__b/fields/Source_Node_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Node_Key__c</fullName>
    <label>Source Node Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>