force-app/main/default/objects/OI_Graph_Edge_Archive__b/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Text</type>
    <length>40</length>
</CustomField>