force-app/main/default/objects/OI_Graph_Edge_Archive__b/fields/Target_Node_Key__c.field-meta.xml
<CustomField>
    <fullName>Target_Node_Key__c</fullName>
    <label>Target Node Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>